# WhisperDemo

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
demo_scripts/notebook/: usage_2.ipynb  usage_3.ipynb  usage_4.ipynb
demo_scripts/python/: scenario_1_basic_transcription.py  scenario_2_multilingual_translation.py  scenario_3_batch_processing.py  scenario_4_advanced_configuration.py  scenario_5_error_handling.py  scenario_6_advanced_batch_processing.py
demo_usage/: usage_1.ipynb
docs/: README.md
docs/en/: CLI_USAGE_EN.md  FEATURES_EN.md  INSTALLATION.md  MODULE_USAGE_EN.md  README.md
docs/tr/: CLI_USAGE_TR.md  FEATURES_TR.md  INSTALLATION.md  MODULE_USAGE_TR.md  README.md
tests/: test_transcriber.py
whisper_transcriber/: __init__.py  __main__.py  config.py  output_handler.py  transcriber.py
